--- a/insights/zero-trust-in-the-cloud-architecture-beyond-buzzwords (1).html
+++ b/insights/zero-trust-in-the-cloud-architecture-beyond-buzzwords (1).html
@@ -1,78 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Zero Trust in the Cloud: Architecture Beyond Buzzwords | Santhosh Kumar Chandrashekar</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="description" content="Zero Trust in the Cloud: Architecture Beyond Buzzwords — Thought leadership article by Santhosh Kumar." />
-  <meta name="theme-color" content="#0ea5e9" />
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN9DGYGE9E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-ZN9DGYGE9E');
+</script>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<meta name="theme-color" content="#0ea5e9" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+<link rel="stylesheet" href="/css/base.css" />
+<link rel="stylesheet" href="/css/layout.css" />
+<link rel="stylesheet" href="/css/components.css" />
+<link rel="stylesheet" href="/css/utilities.css" />
 
-  <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="css/layout.css" />
-  <link rel="stylesheet" href="css/components.css" />
-  <link rel="stylesheet" href="css/utilities.css" />
+<title>Zero Trust in the Cloud: Architecture Beyond Buzzwords | Enterprise Perspective</title>
+<meta name="description" content="Zero Trust in the Cloud: Moving beyond buzzwords to practical enterprise architecture, identity-centric security, and resilient cloud design." />
 </head>
 
 <body>
-  <a id="top" tabindex="-1"></a>
-  <a href="#main" class="skip-link">Skip to main content</a>
+<div data-include="partials/header.html"></div>
 
-  <header class="site-header">
-    <div class="header-inner">
-      <a href="index.html#top" class="brand home-link">
-        <img src="assets/images/profile.webp" alt="Santhosh Kumar" class="brand-avatar" width="32" height="32" />
-        <span class="brand-text">SANTHOSH KUMAR</span>
-      </a>
-      <nav class="nav-links">
-        <a href="index.html#about">About</a>
-        <a href="index.html#expertise">Strategic Focus Areas</a>
-        <a href="index.html#work">Strategic Initiatives Led</a>
-        <a href="index.html#blog">Insights & Thought Leadership</a>
-        <a href="index.html#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
+<main id="main" class="container">
+<div class="case-page">
 
-  <main id="main" class="container">
-    <article style="max-width:820px; margin:auto; padding:60px 20px;">
-      <p><a href="index.html#blog">← Back to Insights</a></p>
+<a class="case-back" href="/insights/">← Back</a>
 
-      <h1>Zero Trust in the Cloud: Architecture Beyond Buzzwords</h1>
-      <p class="subtitle">Enterprise Architecture | Cloud Strategy | Modernisation</p>
+<h1>Zero Trust in the Cloud: Architecture Beyond Buzzwords</h1>
+<p class="subtitle">Enterprise Architecture | Cloud Security | Digital Resilience</p>
 
-      <figure style="margin:40px 0; text-align:center;">
-        <img src="assets/images/zero-trust-in-the-cloud-architecture-beyond-buzzwords.png"
-             alt="Zero Trust cloud architecture diagram"
-             style="width:100%; border-radius:12px;"
-             loading="lazy" decoding="async">
-      </figure>
+<figure style="margin:40px 0; text-align:center;">
+  <img src="../assets/images/zero-trust-cloud-architecture.png"
+       alt="Zero Trust cloud architecture conceptual diagram"
+       style="width:100%; border-radius:12px;"
+       loading="lazy" decoding="async">
+  <figcaption style="font-size:14px; opacity:0.7; margin-top:8px;">
+    Zero Trust shifts security from perimeter defense to identity-centric verification.
+  </figcaption>
+</figure>
 
-      <p>In today’s hyper-connected enterprise environment, “Zero Trust” has become a boardroom imperative. Yet, as executives increasingly demand Zero Trust strategies—especially for cloud-native and hybrid environments—technology leaders must separate foundational architectural principles from fleeting hype. Moving beyond buzzwords requires a strategic, business-focused translation of Zero Trust principles into actionable, sustainable cloud architecture.</p>
+<p>
+Zero Trust has become a board-level mandate. Yet in many organizations, it remains a collection of tools rather than a cohesive architectural strategy.
+</p>
 
-      <h2>The Value Proposition: Why Zero Trust, Why Now?</h2>
-      <p>Cyber threats are evolving, driven by cloud adoption, remote work, and digital transformation. Traditional perimeter-based security models are no longer effective in protecting complex multi-cloud and hybrid workloads. Zero Trust, with its “never trust, always verify” ethos, aligns with today’s threat landscape and agile business needs by minimizing attack surfaces and enforcing least-privilege access everywhere.</p>
-      <p>For the enterprise, Zero Trust is more than a security upgrade; it is a lever for business resilience, regulatory compliance, and digital confidence—all of which underpin innovation and competitive differentiation.</p>
+<p>
+In cloud-native and hybrid environments, traditional perimeter-based models collapse. Networks are fluid. Workloads are distributed. Users operate from anywhere. The perimeter is no longer a firewall — it is identity.
+</p>
 
-      <h2>Core Architectural Tenets: Translating Principles into Practice</h2>
+<blockquote class="signature-quote">
+Zero Trust is not a product. It is an architectural philosophy grounded in continuous verification.
+</blockquote>
 
-      <h3>1. Identity and Access Management as a Foundation</h3>
-      <p>Identity is now the new perimeter. Effective Zero Trust in the cloud begins with robust IAM: federated identities, strong authentication, and fine-grained access controls. Cloud-native IAM services support dynamic policy enforcement based on user, device, and contextual signals.</p>
+<h2>Why Zero Trust Matters Now</h2>
 
-      <h3>2. Micro-segmentation and Least-Privilege in the Cloud</h3>
-      <p>Zero Trust architectures break apart traditional network perimeters. Micro-segmentation allows workloads, applications, and data to be isolated and protected independently. Least-privilege principles extend to application components, serverless functions, and containers.</p>
+<p>
+Cloud adoption, remote work, API ecosystems, and supply chain integrations have expanded the enterprise attack surface dramatically. Implicit trust within internal networks is no longer viable.
+</p>
 
-      <h3>3. Continuous Verification and Monitoring</h3>
-      <p>Verification isn’t a one-time event; it’s continuous. Cloud platforms offer telemetry and analytics that support real-time identity, data, and behavior analysis.</p>
+<p>
+Zero Trust replaces assumed trust with explicit validation. Every request — whether from a user, service, or workload — must be authenticated, authorized, and validated based on context.
+</p>
 
-      <h3>4. Data-Centric Security and Encryption</h3>
-      <p>Cloud-based Zero Trust demands a data-centric approach: classify, tag, and encrypt data at rest and in transit while enforcing context-aware access controls.</p>
+<p>
+For the enterprise, this is not merely a security shift. It is a resilience strategy.
+</p>
 
-      <h2>Strategic Considerations for Enterprise Architects</h2>
-      <ul>
-        <li><strong>Assessment and Roadmapping:</strong> Conduct Zero Trust maturity assessments and define phased adoption plans.</li>
-        <li><strong>Stakeholder Engagement:</strong> Partner with security, networking, application, and compliance teams.</li>
-        <li><strong>Governance and Change Management:</strong> Integrate Zero Trust into cloud gove
+<h2>Core Architectural Principles</h2>
+
+<h3>1. Identity as the Control Plane</h3>
+<p>
+Identity becomes the primary enforcement boundary. Robust IAM, strong authentication, conditional access policies, and federated identity models form the foundation of Zero Trust architecture.
+</p>
+<p>
+Access decisions should incorporate user context, device posture, and risk signals — not just network location.
+</p>
+
+<h3>2. Least Privilege Everywhere</h3>
+<p>
+Zero Trust extends least-privilege principles beyond user access. Applications, containers, serverless functions, and APIs should operate with minimal permissions required for their function.
+</p>
+<p>
+Granular policy design prevents lateral movement within cloud environments.
+</p>
+
+<h3>3. Micro-Segmentation and Workload Isolation</h3>
+<p>
+Traditional flat networks are replaced by segmented, workload-level boundaries. Micro-segmentation limits blast radius and enforces isolation between application tiers.
+</p>
+<p>
+In the cloud, this often translates to network segmentation, service mesh controls, and policy-driven traffic filtering.
+</p>
+
+<h3>4. Continuous Monitoring and Telemetry</h3>
+<p>
+Zero Trust assumes breach is possible. Real-time logging, behavioral analytics, and anomaly detection are critical for rapid detection and response.
+</p>
+<p>
+Cloud-native observability platforms enable continuous validation rather than periodic audits.
+</p>
+
+<h3>5. Data-Centric Protection</h3>
+<p>
+Security must travel with the data. Classification, encryption at rest and in transit, and context-aware access controls ensure protection independent of workload location.
+</p>
+
+<h2>Enterprise Architecture Considerations</h2>
+
+<p>
+Zero Trust adoption cannot be delegated solely to security teams. It requires architectural alignment across identity, networking, application design, and governance.
+</p>
+
+<ul>
+  <li>Define a target-state Zero Trust architecture blueprint</li>
+  <li>Assess maturity across identity, network, and workload controls</li>
+  <li>Integrate security policy into DevOps pipelines (DevSecOps)</li>
+  <li>Align Zero Trust initiatives with regulatory and compliance objectives</li>
+</ul>
+
+<p>
+The role of enterprise architecture is to ensure Zero Trust principles are embedded systematically — not layered reactively.
+</p>
+
+<h2>From Security Control to Business Enabler</h2>
+
+<p>
+When implemented strategically, Zero Trust strengthens more than cyber defense. It enables:
+</p>
+
+<ul>
+  <li>Secure digital collaboration</li>
+  <li>Confident multi-cloud adoption</li>
+  <li>Resilient remote workforce models</li>
+  <li>Improved regulatory posture</li>
+</ul>
+
+<p>
+Security maturity becomes a competitive advantage rather than a compliance obligation.
+</p>
+
+<h2>Final Thoughts</h2>
+
+<p>
+Zero Trust in the cloud is not achieved through tooling alone. It requires intentional architecture, disciplined governance, and cultural alignment across engineering and security teams.
+</p>
+
+<p>
+Beyond the buzzwords lies a clear objective: reduce implicit trust, increase visibility, and build resilient digital platforms that can withstand evolving threats.
+</p>
+
+<hr style="margin:50px 0; opacity:0.2;">
+<nav id="articleNav" style="display:flex; justify-content:space-between; gap:20px;"></nav>
+
+<script>
+fetch('../data/articles.json')
+  .then(res => res.json())
+  .then(articles => {
+    const currentPath = window.location.pathname.split('/').pop();
+    const nav = document.getElementById('articleNav');
+    const index = articles.findIndex(a => a.url.endsWith(currentPath));
+    if (index > 0) {
+      const prev = articles[index - 1];
+      nav.innerHTML += `<a href="../${prev.url}">← <strong>${prev.title}</strong></a>`;
+    } else {
+      nav.innerHTML += `<span></span>`;
+    }
+    if (index < articles.length - 1) {
+      const next = articles[index + 1];
+      nav.innerHTML += `<a href="../${next.url}" style="text-align:right;"><strong>${next.title}</strong> →</a>`;
+    }
+  });
+</script>
+
+</div>
+</main>
+
+<div data-include="partials/footer.html"></div>
+
+<script src="/js/include.js"></script>
+<script src="/js/theme.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/nav-active.js"></script>
+
+</body>
+</html>
