--- a/about/index.html
+++ b/about/index.html
@@ -31,11 +31,12 @@
     <p class="subtitle">Background, principles, and what I optimize for.</p>
   </header>
   <section>
-    <p>I’m a TOGAF®-certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. Today, I specialise in Cloud &amp; DevOps Portfolio Architecture within the Enterprise Architecture structure, focusing on target-state design, technology roadmapping, and platform strategies that reduce complexity and enable sustainable enterprise transformation.</p>
+    <p>I’m a TOGAF® Certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, and platform engineering. Today, I operate at the intersection of Enterprise Architecture and Cloud Transformation, shaping target-state architectures, defining technology roadmaps, and leading Cloud & DevOps portfolio strategy at scale.</p>
+    <p>I focus on reducing complexity, strengthening governance, and building platform foundations that enable sustainable enterprise growth.</p>
 <blockquote class="signature-quote">
       At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction.
     </blockquote>
-    <p>My goal is to design technology foundations and roadmaps that evolve with the organisation, support modern ways of working, and deliver long-term business value.</p>
+    <p>I design technology strategies and transformation roadmaps that evolve with the organisation, support modern delivery models, and translate architectural intent into measurable business impact.</p>
   </section>
 
   </main>
