--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
     <img src="/assets/images/profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" />
     <div>
       <h1>Santhosh Kumar Chandrashekar</h1>
-      <p class="subtitle">TOGAF® Certified Architect<br/>Cloud &amp; DevOps Portfolio Strategic Leader</p>
-      <p>I architect and lead enterprise cloud transformations that accelerate delivery, strengthen governance, and build resilient platforms at scale.</p>
+      <p class="subtitle">TOGAF® Certified Architect<br/>Cloud &amp; DevOps Portfolio Architecture Leader</p>
+      <p>I architect and lead enterprise cloud transformation portfolios that accelerate delivery, strengthen governance, and build resilient platforms at scale.</p>
     </div>
   </section>
+    <a href="/about/" class="cta-hero-secondary">
+  My Architectural Philosophy →
+</a>
 
   <section class="focus-grid" aria-labelledby="focusTitle">
   <h2 id="focusTitle">Strategic Focus Areas</h2>
