--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
   <section class="case-grid-compact" aria-labelledby="homeInitTitle">
     <h2 id="homeInitTitle">Featured Initiatives</h2>
-    <p class="section-note">A few selected initiatives. For more, goto initiatives</p>
+    <p class="section-note"><a href="/initiatives/">View all initiatives →</a></p>
     <div class="grid" id="homeInitiatives"><p class="section-note">Loading initiatives…</p></div>
   </section>
 
   <section class="insights-grid" aria-labelledby="homeInsightsTitle">
     <h2 id="homeInsightsTitle">Latest Insights</h2>
-    <p class="section-note">Recent articles. For more, goto Insights</p>
+    <p class="section-note"><a href="/insights/">View all insights →</a></p>
     <div class="grid" id="homeInsights"><p class="section-note">Loading insights…</p></div>
   </section>
 
