--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
       <h1>Santhosh Kumar Chandrashekar</h1>
       <p class="subtitle">TOGAF® Certified Architect<br/>Cloud &amp; DevOps Portfolio Architecture Leader</p>
       <p>I architect and lead enterprise cloud transformation portfolios that accelerate delivery, strengthen governance, and build resilient platforms at scale.</p>
+      <p class="section-note"><a href="/about/">My Architectural Philosophy →</a></p>
     </div>
   </section>
-    <a href="/about/" class="cta-hero-secondary">
-  My Architectural Philosophy →
-</a>
 
   <section class="focus-grid" aria-labelledby="focusTitle">
   <h2 id="focusTitle">Strategic Focus Areas</h2>
