--- a/about/index.html
+++ b/about/index.html
@@ -31,12 +31,12 @@
     <p class="subtitle">Background, principles, and what I optimize for.</p>
   </header>
   <section>
-    <p>I’m a TOGAF® Certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, and platform engineering. Today, I operate at the intersection of Enterprise Architecture and Cloud Transformation, shaping target-state architectures, defining technology roadmaps, and leading Cloud & DevOps portfolio strategy at scale.</p>
-    <p>I focus on reducing complexity, strengthening governance, and building platform foundations that enable sustainable enterprise growth.</p>
+    <p class="subtitle">I’m a TOGAF® Certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, and platform engineering. Today, I operate at the intersection of Enterprise Architecture and Cloud Transformation, shaping target-state architectures, defining technology roadmaps, and leading Cloud & DevOps portfolio strategy at scale.</p>
+    <p class="subtitle">I focus on reducing complexity, strengthening governance, and building platform foundations that enable sustainable enterprise growth.</p>
 <blockquote class="signature-quote">
       At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction.
     </blockquote>
-    <p>I design technology strategies and transformation roadmaps that evolve with the organisation, support modern delivery models, and translate architectural intent into measurable business impact.</p>
+    <p class="subtitle">I design technology strategies and transformation roadmaps that evolve with the organisation, support modern delivery models, and translate architectural intent into measurable business impact.</p>
   </section>
 
   </main>
