--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       <img src="/assets/images/focus-tech-strategy.webp" alt="Strategic Focus Areas" />
 
       <div class="card-body">
-        <h3>A typical engagement includes:</h3>
+        <h3>Typical engagement scope</h3>
 
-        <ul class="focus-list">
-  <li>Clarifying the technology direction through target-state and roadmap definition</li>
-  <li>Aligning cloud adoption and platform engineering with business priorities</li>
-  <li>Improving delivery efficiency through DevSecOps and engineering standards</li>
-  <li>Establishing guardrails that enable velocity without compromising governance</li>
-</ul>
+  <ul class="focus-list">
+    <li>Defining target-state architecture and multi-year technology roadmaps</li>
+    <li>Aligning cloud and platform strategy with measurable business outcomes</li>
+    <li>Embedding DevSecOps practices to increase delivery speed and reliability</li>
+    <li>Designing governance guardrails that enable innovation at scale</li>
+  </ul>
 
         <a href="/focus/" class="cta-focus">
           Explore My Focus Areas →
